[gd_scene load_steps=3 format=3 uid="uid://dlrfamivcnyex"]

[ext_resource type="Texture2D" uid="uid://bluwtsouxsyqc" path="res://Assets/imperialSwordsmanIcon.png" id="1_x8wpb"]
[ext_resource type="Script" uid="uid://dbip5u1lgm6f" path="res://Scripts/unit_button.gd" id="2_vcyba"]

[node name="UnitButton" type="Button"]
custom_minimum_size = Vector2(100, 0)
offset_right = 100.0
offset_bottom = 114.0
icon = ExtResource("1_x8wpb")
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("2_vcyba")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 67.0
offset_right = 100.0
offset_bottom = 19.0
color = Color(0, 0, 1, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 32.0
offset_bottom = 18.0
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.0
offset_top = -28.0
offset_right = 38.0
offset_bottom = -3.0
grow_horizontal = 2
text = "^"

[node name="UnitLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -39.0
offset_right = 44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Imperial
Swordsman"
horizontal_alignment = 1
autowrap_mode = 2

[node name="UnitNumLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -112.0
offset_right = -33.0
offset_bottom = -95.936
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "(1)"
horizontal_alignment = 1

[node name="ManaLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -113.0
offset_right = 49.0
offset_bottom = -96.936
grow_horizontal = 2
grow_vertical = 0
text = "15M"
horizontal_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
